# kafka-connect-mcp

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish-pypi.yml  release.yml  tests.yml
src/kafka_connect_mcp/: __init__.py  safety.py  server.py
tests/: conftest.py  test_cluster.py  test_connectors.py  test_plugins.py  test_safety.py  test_tasks.py
