[project]
name = "kafka-connect-mcp"
version = "0.1.0"
description = "MCP server for managing Kafka Connect clusters"
readme = "README.md"
authors = [
    { name = "svc-build-general", email = "svc-build-general@slack-corp.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.scripts]
kafka-connect-mcp = "kafka_connect_mcp.server:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]
